Use Java 8 in lambda again
Co-authored-by: Marco Geweke <marco.geweke@otto.de>